syntax = "proto2";

/* Copyright 2021 Danny McClanahan */
/* SPDX-License-Identifier: AGPL-3.0-only */

package grouplink.proto.message;

import "session.proto";

message Message {
  oneof type {
    // Exposes the sender's address.
    grouplink.proto.session.PreKeyBundle bundle                       = 1;
    // Does *not* expose the sender's address.
    grouplink.proto.session.SealedSenderMessage sealed_sender_message = 2;
  }
}
